force-app/main/default/objects/DD_Billing__c/DD_Billing__c.object-meta.xml
<CustomObject>
    <description>Monthly premium billing for employer groups</description>
    <label>Billing Statement</label>
    <nameField><displayFormat>BIL-{000000}</displayFormat><label>Statement ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Billing Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>