force-app/main/default/objects/DD_Billing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Group Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo><relationshipLabel>Billing Statements</relationshipLabel><relationshipName>Billing_Stmts</relationshipName><required>true</required>
    <description>Employer group</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>