force-app/main/default/objects/DD_Billing__c/fields/Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period__c</fullName>
    <label>Billing Period</label>
    <type>Date</type>
    <required>true</required>
    <description>Month/year of billing</description>
</CustomField>