force-app/main/default/objects/DD_Billing__c/fields/Employee_Share__c.field-meta.xml
<CustomField>
    <fullName>Employee_Share__c</fullName>
    <label>Employee Share</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Employee portion</description>
</CustomField>