force-app/main/default/objects/DD_Billing__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>Lookup</type>
    <referenceTo>DD_Policy__c</referenceTo><relationshipLabel>Billing Statements</relationshipLabel><relationshipName>Billing_Stmts_Pol</relationshipName><required>false</required>
    <description>Associated policy</description>
</CustomField>