force-app/main/default/objects/DD_Billing__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Generated</fullName><default>false</default><label>Generated</label></value><value><fullName>Sent</fullName><default>false</default><label>Sent</label></value><value><fullName>Paid</fullName><default>false</default><label>Paid</label></value><value><fullName>Past Due</fullName><default>false</default><label>Past Due</label></value></valueSetDefinition></valueSet>
    <description>Billing status</description>
</CustomField>