force-app/main/default/objects/DD_Billing__c/fields/Total_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium__c</fullName>
    <label>Total Premium</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>true</required>
    <description>Total premium for period</description>
</CustomField>