force-app/main/default/objects/DD_Billing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>Policy__c</columns>
    <columns>Account__c</columns>
    <columns>Billing_Period__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Premium__c</columns>
</ListView>